# deye-inverter-mqtt

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  SUN-10K-SG02LP1-AU-AM3.patch  TEST_IMPL_PLAN.md  config.env.example  deye-inverter-mqtt.service  deye_cli.py  deye_cli.sh  deye_config.py  deye_connector.py  deye_daemon.py  deye_events.py  deye_main.py  deye_modbus.py  deye_modbus_test.py  deye_mqtt.py  deye_mqtt_inttest.py  deye_mqtt_publisher.py  deye_observation.py  deye_sensor.py  deye_sensor_test.py  deye_sensors.py  deye_sensors_deye_hybrid.py  deye_sensors_deye_sg04lp3.py  deye_sensors_igen_dtsd422.py  deye_set_time_processor.py  deye_set_time_processor_test.py  docker-compose.yaml  local-run.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_debug.sh  service.sh
.devcontainer/: devcontainer-lock.json  devcontainer.json  install.sh
.zed/: debug.json
docs/: metric_group_aggregated.md  metric_group_deye_hybrid.md  metric_group_deye_hybrid_battery.md  metric_group_deye_hybrid_bms.md  metric_group_deye_hybrid_timeofuse.md  metric_group_deye_micro_systemtime.md  metric_group_deye_sg01hp3.md  metric_group_deye_sg01hp3_battery.md  metric_group_deye_sg01hp3_bms.md  metric_group_deye_sg01hp3_generator.md  metric_group_deye_sg01hp3_settings.md  metric_group_deye_sg01hp3_systemtime.md  metric_group_deye_sg01hp3_timeofuse.md  metric_group_deye_sg01hp3_ups.md  metric_group_deye_sg02lp1.md  metric_group_deye_sg03lp1.md  metric_group_deye_sg04lp3.md  metric_group_deye_sg04lp3_battery.md  metric_group_deye_sg04lp3_generator.md  metric_group_deye_sg04lp3_settings.md  metric_group_deye_sg04lp3_timeofuse.md  metric_group_deye_sg04lp3_ups.md  metric_group_igen_dtsd422.md  metric_group_micro.md  metric_group_settings.md  metric_group_settings_micro.md  metric_group_string.md  stdout_publisher.md  telegraf.md
ha_definitions/: Makefile  README.md  deye_hybrid_ha_custom.yaml  deye_hybrid_map.yaml  (+4 more)
(+91 files in other folders)
